finished queries and routes
